--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,14 +19,14 @@
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     background: linear-gradient(135deg, var(--color-1), var(--color-5));
 }
 
 .header {
-    width: 100vh;
+    width: 100%;
     max-width: 450px;
     background-color: #fff;
     margin: auto;
@@ -83,7 +83,7 @@ body {
 }
 
 .tasks {
-    width: 100vh;
+    width: 100%;
     max-width: 450px;
     background-color: #fff;
     margin: auto;
