--- a/static/css/main.css
+++ b/static/css/main.css
@@ -69,6 +69,7 @@ body {
     padding: 10px;
     font-weight: 14px;
     padding-left: 20px;
+    width: calc(100% - 20px);
 }
 .header .new-task button {
     border: none;
