--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,7 +13,7 @@
 
 * {
     user-select: none;
-    font-family: 'Pixelify Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
