--- a/static/css/loader.css
+++ b/static/css/loader.css
@@ -1,123 +1,40 @@
-:root {
-    --gray-1: #757575;
-    --gray-2: #edeef0;
+#outline {
+    stroke-dasharray: 2.42777px, 242.77666px;
+    stroke-dashoffset: 0;
+    -webkit-animation: anim 1.6s linear infinite;
+    animation: anim 1.6s linear infinite;
 }
 
-.loader {
-    width: 100%;
-    height: 50px;
-    position: relative;
-}
-
-.loader-text {
-    position: absolute;
-    top: 0;
-    padding: 0;
-    margin: 0;
-    animation: text_713 3.5s ease both infinite;
-    font-size: .8rem;
-    letter-spacing: 1px;
-}
-
-.load {
-    background-color: var(--gray-1);
-    border-radius: 50px;
-    display: block;
-    height: 16px;
-    width: 16px;
-    bottom: 0;
-    position: absolute;
-    transform: translateX(64px);
-    animation: loading_713 3.5s ease both infinite;
-}
-
-.load::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: var(--gray-2);
-    border-radius: inherit;
-    animation: loading2_713 3.5s ease both infinite;
-}
-
-@keyframes text_713 {
-    0% {
-        letter-spacing: 1px;
-        transform: translateX(0px);
+@-webkit-keyframes anim {
+    12.5% {
+        stroke-dasharray: 33.98873px, 242.77666px;
+        stroke-dashoffset: -26.70543px;
     }
 
-    40% {
-        letter-spacing: 2px;
-        transform: translateX(26px);
-    }
-
-    80% {
-        letter-spacing: 1px;
-        transform: translateX(32px);
-    }
-
-    90% {
-        letter-spacing: 2px;
-        transform: translateX(0px);
+    43.75% {
+        stroke-dasharray: 84.97183px, 242.77666px;
+        stroke-dashoffset: -84.97183px;
     }
 
     100% {
-        letter-spacing: 1px;
-        transform: translateX(0px);
+        stroke-dasharray: 2.42777px, 242.77666px;
+        stroke-dashoffset: -240.34889px;
     }
 }
 
-@keyframes loading_713 {
-    0% {
-        width: 16px;
-        transform: translateX(0px);
+@keyframes anim {
+    12.5% {
+        stroke-dasharray: 33.98873px, 242.77666px;
+        stroke-dashoffset: -26.70543px;
     }
 
-    40% {
-        width: 100%;
-        transform: translateX(0px);
-    }
-
-    80% {
-        width: 16px;
-        transform: translateX(64px);
-    }
-
-    90% {
-        width: 100%;
-        transform: translateX(0px);
+    43.75% {
+        stroke-dasharray: 84.97183px, 242.77666px;
+        stroke-dashoffset: -84.97183px;
     }
 
     100% {
-        width: 16px;
-        transform: translateX(0px);
-    }
-}
-
-@keyframes loading2_713 {
-    0% {
-        transform: translateX(0px);
-        width: 16px;
-    }
-
-    40% {
-        transform: translateX(0%);
-        width: 80%;
-    }
-
-    80% {
-        width: 100%;
-        transform: translateX(0px);
-    }
-
-    90% {
-        width: 80%;
-        transform: translateX(15px);
-    }
-
-    100% {
-        transform: translateX(0px);
-        width: 16px;
+        stroke-dasharray: 2.42777px, 242.77666px;
+        stroke-dashoffset: -240.34889px;
     }
 }
