--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,18 @@
 :root {
-    --blue-1: #87DBFF;
+    --black-1: #545454;
 
+    --blue-1: #87DBFF;
 
     --gray-1: #BBB4D9;
     --gray-2: #F1ECFF;
 
     --green-1: #1DDC42;
+
+    --pink-1: #F6A6BB;
+    --pink-2: #F4BBC9;
+    --pink-3: #F7D1D8;
+    --pink-4: #FAE6E7;
+    --pink-5: #F7EEED;
 
     --purple-1: #9B02FD;
     --purple-2: #A38FFE;
@@ -26,7 +33,7 @@ body {
     overflow: hidden;
     margin: 0;
     padding: 0;
-    background: linear-gradient(180deg, var(--purple-2), var(--blue-1));
+    background: linear-gradient(180deg, var(--pink-1), var(--pink-5));
 }
 
 .container {
@@ -37,7 +44,7 @@ body {
     padding: 30px 20px;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    background: linear-gradient(180deg, var(--purple-3), var(--purple-4));
+    background: linear-gradient(180deg, var(--pink-2), var(--pink-3));
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .title {
@@ -56,7 +63,7 @@ body {
     border-radius: 20px;
 }
 .navigation a.active {
-    background-color: var(--purple-1);
+    background-color: var(--pink-1);
 }
 
 .tasks {
@@ -95,7 +102,7 @@ body {
 }
 
 .task-title {
-    color: var(--purple-1);
+    color: var(--pink-1);
     font-size: 18px;
     font-weight: bold;
 }
@@ -141,8 +148,8 @@ body {
     border-radius: 50%;
     outline: none;
     pointer-events: all;
-    background-color: var(--purple-1);
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+    background-color: var(--pink-1);
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.15);
 }
 .action-btns button.active {
     display: inline-block;
@@ -195,12 +202,13 @@ body {
     transform: translateY(0px);
 }
 .task-action-title {
-    color: var(--purple-1);
+    color: var(--pink-1);
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
 }
 .task-action-input {
+    color: var(--black-1);
     font-size: 16px;
     padding: 20px 10px;
     width: calc(100% - 20px);
